Closed Bug 1779149 Opened 3 years ago Closed 3 years ago

Fix incorrect assertions in CachedTableAccessible

Categories

(Core :: Disability Access APIs, defect)

defect

Tracking

()

RESOLVED FIXED
104 Branch
Tracking Status
firefox104 --- fixed

People

(Reporter: Jamie, Assigned: Jamie)

References

Details

(Whiteboard: [ctw-m3])

Attachments

(1 file)

There are some incorrect assertions in CachedTableAccessible that are causing debug crashes. See this try run.

  1. When updating the row/col map, there can be overlapping cells - we even have code to support that - so don't assert that there is no existing cell.
  2. When retrieving the caption, the role assertion was accidentally reversed.
Blocks: a11y-ctw
Pushed by jteh@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e8136524da55 Remove/fix incorrect assertions in CachedTableAccessible. r=morgan
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 104 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: