Bug 1779149: Remove/fix incorrect assertions in CachedTableAccessible. r=morgan

1. When updating the row/col map, there can be overlapping cells - we even have code to support that - so don't assert that there is no existing cell.
2. When retrieving the caption, the role assertion was accidentally reversed.

Differential Revision: https://phabricator.services.mozilla.com/D151569